--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.4",
     "flockos": "github:flockchat/flockos-node-sdk#0.0.2",
     "jade": "~1.11.0",
+    "mongoose": "^4.6.4",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
