use incoming webhooks to broadcast message to other groups

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "mongoose": "^4.6.4",
     "morgan": "~1.7.0",
+    "request": "^2.75.0",
     "serve-favicon": "~2.3.0"
   }
 }
